# axum-next-template

./: .gitignore  docker-compose.yaml  justfile
.posting/collection/note/: create-note.posting.yaml  delete-note.posting.yaml  get-note.posting.yaml  get-notes.posting.yaml  update-note.posting.yaml
.posting/collection/notebook/: create-notebook.posting.yaml  delete-notebook.posting.yaml  get-notebook.posting.yaml  get-notebooks.posting.yaml  (+1 more)
api/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_note.rs  m20220101_000001_create_note_table.rs  m20250520_001516_create_notebook_table.rs  m20250520_021659_alter_note.rs
api/migration/src/schema/: note.rs  notebook.rs
api/migrations/: 20250805032625_create_note_and_notebook_tables.down.sql  20250805032625_create_note_and_notebook_tables.up.sql
api/src/: main.rs
api/src/controllers/: note.rs  notebook.rs
api/src/core/: app.rs  env.rs  mod.rs  server.rs  validated_json.rs
api/src/core/error/: mod.rs  server_error_response.rs
api/src/middleware/: note.rs  notebook.rs
api/src/models/: note.rs  notebook.rs
api/src/requests/: note.rs  notebook.rs
api/src/responses/: mod.rs  note.rs  notebook.rs
api/src/routes/: main.rs  mod.rs  note.rs  notebook.rs
api/src/traits/: field_accessor.rs  mod.rs
api/src/utils/: json.rs  mod.rs  query.rs  regex.rs  sea_orm.rs  terminal_command.rs
client/: package.json
docker/postgres/: init.sql
scripts/: generate_env.sh  setup.sh
server/: Cargo.toml
server/entity/: Cargo.toml
server/migration/: Cargo.toml
server/src/: lib.rs  main.rs
(+945 files in other folders)
